@@ -15,7 +15,9 @@
 	<properties>
 		<java.version>17</java.version>
 		<vaadin.version>24.9.3</vaadin.version>
-		<graaljs.version>24.2.2</graaljs.version>
+		<graalvm.version>25.0.1</graalvm.version>
+		<image.name>${project.artifactId}</image.name>
+		<image.path>${project.build.directory}/${image.name}</image.path>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -62,12 +64,12 @@
 		<dependency>
 			<groupId>org.graalvm.polyglot</groupId>
 			<artifactId>polyglot</artifactId>
-			<version>${graaljs.version}</version>
+			<version>${graalvm.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.graalvm.polyglot</groupId>
 			<artifactId>js</artifactId>
-			<version>${graaljs.version}</version>
+			<version>${graalvm.version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
@@ -132,11 +134,82 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<!--
+                            Copies compiler dependencies to the target/compiler folder. In order to run
+					with an
+                            optimizing runtime on other JDKs than GraalVM we need to put the compiler on
+					the upgrade module path.
+                            -->
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>
+								${project.build.directory}/compiler
+							</outputDirectory>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+							<artifactItems>
+								<!--
+                                        Unfortunately Maven does not support resolving transitive dependencies
+                                        here automatically. So the list of dependencies might need to be updated when
+								upgrading
+                                        to new versions of GraalVM.
+                                        -->
+								<artifactItem>
+									<groupId>org.graalvm.sdk</groupId>
+									<artifactId>collections</artifactId>
+									<version>${graalvm.version}</version>
+									<type>jar</type>
+									<destFileName>collections.jar</destFileName>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.graalvm.sdk</groupId>
+									<artifactId>nativeimage</artifactId>
+									<version>${graalvm.version}</version>
+									<type>jar</type>
+									<destFileName>nativeimage.jar</destFileName>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.graalvm.sdk</groupId>
+									<artifactId>word</artifactId>
+									<version>${graalvm.version}</version>
+									<type>jar</type>
+									<destFileName>word.jar</destFileName>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.graalvm.truffle</groupId>
+									<artifactId>truffle-compiler</artifactId>
+									<version>${graalvm.version}</version>
+									<type>jar</type>
+									<destFileName>truffle-compiler.jar</destFileName>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.graalvm.compiler</groupId>
+									<artifactId>compiler</artifactId>
+									<version>${graalvm.version}</version>
+									<type>jar</type>
+									<destFileName>compiler.jar</destFileName>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
                     <jvmArguments>
-                        -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --enable-native-access=ALL-UNNAMED
+                        -XX:+UnlockExperimentalVMOptions
+                        -XX:+EnableJVMCI
+                        --upgrade-module-path=${project.build.directory}/compiler
                     </jvmArguments>
                 </configuration>
 			</plugin>
